<resources>
    <string name="app_name">Calculadora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visor">Visor</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="adicao">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtracao">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplicacao">*</string>
    <string name="igual">=</string>
    <string name="_0">0</string>
    <string name="divisao">/</string>
    <string name="sair">Sair</string>
    <string name="virgula">.</string>
    <string name="c">C</string>
</resources>