<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".Act_Calculadora">

    <TextView
        android:id="@+id/txt_visor_calculadora"
        android:background="@color/light_black"
        android:textSize="12pt"
        android:textColor="@color/white"
        android:gravity="end|center"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txt_visor2_calculadora"
        android:background="@color/light_black"
        android:textSize="36pt"
        android:textColor="@color/white"
        android:gravity="end|center"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TableRow android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_num1_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_1" />

            <Button
                android:id="@+id/bt_num2_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_2">

            </Button>

            <Button
                android:id="@+id/bt_num3_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_3">

            </Button>

            <Button
                android:id="@+id/bt_mais_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/adicao">

            </Button>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt_num4_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_4" />

            <Button
                android:id="@+id/bt_num5_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_5">

            </Button>

            <Button
                android:id="@+id/bt_num6_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_6">

            </Button>

            <Button
                android:id="@+id/bt_menos_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/subtracao">

            </Button>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt_num7_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_7" />

            <Button
                android:id="@+id/bt_num8_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_8">

            </Button>

            <Button
                android:id="@+id/bt_num9_mycalculadora"
                style="@style/botao"
                android:onClick="onClick"
                android:text="@string/_9">

            </Button>

            <Button
                android:id="@+id/bt_vezes_mycalculadora"
                style="@style/botao"
                android:text="@string/multiplicacao">

            </Button>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt_pos_neg_mycalculadora"
                style="@style/botao"
                android:gravity="center_horizontal"
                android:onClick="apaga"
                android:text="+/-">

            </Button>

            <Button
                android:id="@+id/bt_num0_mycalculadora"
                style="@style/botao"
                android:text="@string/_0">

            </Button>

            <Button
                android:id="@+id/bt_virgula_mycalculadora"
                style="@style/botao"
                android:text="@string/virgula">

            </Button>

            <Button
                android:id="@+id/bt_dividir_mycalculadora"
                style="@style/botao"
                android:text="@string/divisao">

            </Button>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt_apagaTudo_mycalculadora"
                style="@style/botao"
                android:text="@string/c">

            </Button>

            <Button
                android:id="@+id/bt_apagaUltimaEntrada_mycalculadora"
                style="@style/botao"
                android:drawableLeft="@drawable/backspace"
                android:gravity="center"
                android:onClick="apaga"
                android:text="">

            </Button>

            <Button
                android:id="@+id/bt_igual_mycalculadora"
                style="@style/botao"
                android:layout_weight="60"
                android:backgroundTint="@color/orange"
                android:text="@string/igual">

            </Button>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt_sair_mycalculadora"
                style="@style/botao"
                android:layout_span="@integer/material_motion_duration_long_1"
                android:onClick="menssagem"
                android:text="@string/sair"
                android:textSize="8pt">
                
            </Button>

        </TableRow>

    </TableLayout>

</LinearLayout>